--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,20 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <script src="/scripts/socket.io-1.4.5.js"></script>
+    <script src="/scripts/knockout-3.4.0.js"></script>
+    
+  </head>
+  <script>
+    var socket = io.connect('http://' + document.domain + ':' + location.port);
+    socket.on('connect', function(s) {
+      console.log('Connected!');
+    });
+    socket.on('news', function (data) {
+      console.log(data);
+      socket.emit('my other event', { my: 'data' });
+    });
+  </script>
   <body>
     <h1>I'm a single page application!</h1>
   </body>
