--- a/html/index.html
+++ b/html/index.html
@@ -3,10 +3,9 @@
   <head>
     <script src="/scripts/socket.io-1.4.5.js"></script>
     <script src="/scripts/knockout-3.4.0.js"></script>
-    
   </head>
   <script>
-    var socket = io.connect('http://' + document.domain + ':' + location.port);
+    var socket = io.connect('https://' + document.domain + ':' + location.port);
     socket.on('connect', function(s) {
       console.log('Connected!');
     });
