--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <script src="/scripts/knockout-3.4.0.js"></script>
   </head>
   <script>
-    var socket = io.connect('https://' + document.domain + ':' + location.port);
+    var socket = io.connect(location.protocol+ '//' + document.domain + ':' + location.port);
     socket.on('connect', function(s) {
       console.log('Connected!');
     });
