--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <!--
     <script src="/scripts/socket.io-1.4.5.js"></script>
     <script src="/scripts/knockout-3.4.0.js"></script>
+    -->
   </head>
   <script>
-    var socket = io.connect(location.protocol+ '//' + document.domain + ':' + location.port);
+    var socket = io.connect('http://localhost');
     socket.on('connect', function(s) {
       console.log('Connected!');
     });
