--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="/scripts/socket.io-1.4.5.js"></script>
-    <script src="/scripts/knockout-3.4.0.js"></script>
-  </head>
-  <script>
-    var socket = io.connect('http://localhost');
-    socket.on('connect', function(s) {
+    <script type="text/javascript" src="/scripts/socket.io-1.4.5.js"></script>
+    <script type="text/javascript" src="/scripts/knockout-3.4.0.js"></script>
+    <title>BBB automation</title>
+    <script type="text/javascript">
+      var socket = io.connect('http://localhost');
+      socket.on('connect', function(s) {
       console.log('Connected!');
-    });
-    socket.on('news', function (data) {
+      });
+      socket.on('news', function (data) {
       console.log(data);
       socket.emit('my other event', { my: 'data' });
-    });
-  </script>
+      });
+    </script>
+  </head>
   <body>
     <h1>I'm a single page application!</h1>
   </body>
